// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartContainer receives props and resets the form 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "label": "Step Up",
        "value": 180,
      },
    ]
  }
  date={2025-02-01T05:00:00.000Z}
  existing={
    Object {
      "details": Array [
        Object {
          "account": Object {
            "id": 180,
            "name": "Step Up",
          },
          "amount": 50,
        },
      ],
      "frequency": "Monthly",
      "start": 2025-02-01T05:00:00.000Z,
    }
  }
  format={[Function]}
  onSubmitSchedule={[Function]}
  ready={true}
  save={[Function]}
  saveDate={[Function]}
  schedules={
    Array [
      Object {
        "label": "one time",
        "value": "One-Time",
      },
      Object {
        "label": "every week",
        "value": "Weekly",
      },
      Object {
        "label": "every two weeks",
        "value": "Bi-Weekly",
      },
      Object {
        "label": "once a month",
        "value": "Monthly",
      },
    ]
  }
  setFrequency={[Function]}
  setFund={[Function]}
  state={
    Object {
      "amount": 50,
      "frequency": "Monthly",
      "fundId": 180,
      "fundLabel": "Step Up",
      "startDate": 2025-02-01T05:00:00.000Z,
    }
  }
  text=""
  total={50}
/>
`;

exports[`CartContainer renders checkout ready when schedule is valid 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "label": "Step Up",
        "value": 180,
      },
    ]
  }
  date={2025-02-01T05:00:00.000Z}
  existing={
    Object {
      "details": Array [
        Object {
          "account": Object {
            "id": 180,
            "name": "Step Up",
          },
          "amount": 50,
        },
      ],
      "frequency": "Monthly",
      "start": 2025-02-01T05:00:00.000Z,
    }
  }
  format={[Function]}
  onSubmitSchedule={[Function]}
  ready={true}
  save={[Function]}
  saveDate={[Function]}
  schedules={
    Array [
      Object {
        "label": "one time",
        "value": "One-Time",
      },
      Object {
        "label": "every week",
        "value": "Weekly",
      },
      Object {
        "label": "every two weeks",
        "value": "Bi-Weekly",
      },
      Object {
        "label": "once a month",
        "value": "Monthly",
      },
    ]
  }
  setFrequency={[Function]}
  setFund={[Function]}
  state={
    Object {
      "amount": 50,
      "frequency": "Monthly",
      "fundId": 180,
      "fundLabel": "Step Up",
      "startDate": 2025-02-01T05:00:00.000Z,
    }
  }
  text=""
  total={50}
/>
`;

exports[`CartContainer renders null if no accounts exist 1`] = `null`;

exports[`CartContainer renders offline if !alive 1`] = `<Offline />`;

exports[`CartContainer renders the default component 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "label": "Step Up",
        "value": 180,
      },
    ]
  }
  date={null}
  format={[Function]}
  onSubmitSchedule={[Function]}
  ready={false}
  save={[Function]}
  saveDate={[Function]}
  schedules={
    Array [
      Object {
        "label": "one time",
        "value": "One-Time",
      },
      Object {
        "label": "every week",
        "value": "Weekly",
      },
      Object {
        "label": "every two weeks",
        "value": "Bi-Weekly",
      },
      Object {
        "label": "once a month",
        "value": "Monthly",
      },
    ]
  }
  setFrequency={[Function]}
  setFund={[Function]}
  state={
    Object {
      "amount": undefined,
      "frequency": null,
      "fundId": null,
      "fundLabel": null,
      "startDate": null,
    }
  }
  text=""
  total={NaN}
/>
`;
